# procesamiento-imagenes

./: .gitignore  README.md
DeteccionFigurasGeometricas/: CMakeLists.txt
DeteccionFigurasGeometricas/src/: main.cpp
Taller1_Corte2/: .gitignore  CMakeLists.txt
Taller1_Corte2/include/: Camera.h  ImageLoader.h
Taller1_Corte2/src/: main.cpp
TallerImagenSatelital/: CMakeLists.txt  README.md
TallerImagenSatelital/src/: main.cpp
TallerReconocimientRostros/taller_segmentacion/: CMakeLists.txt
TallerReconocimientRostros/taller_segmentacion/include/: frame_diff.h  gmm_segmenter.h
TallerReconocimientRostros/taller_segmentacion/src/: frame_diff.cpp  gmm_segmenter.cpp  main_frame_diff.cpp  main_gmm.cpp
